[package]
name = "tritium"
version = "0.1.0"
authors = ["Robert Hurst <rhurst@e-xact.com>"]
description = "Tritium is a proxy built with the goal of being ultra fast, easy to use, and feature rich"

[lib]
name = "tritium"
path = "src/lib.rs"

[[bin]]
name = "tritium"
path = "src/bin.rs"

[dependencies]
